chore(init): commit

--- a/bootstrap/infra/base/apps/authentik-app.yaml
+++ b/bootstrap/infra/base/apps/authentik-app.yaml
@@ -24,7 +24,7 @@ spec:
   source:
     path: infrastructure/authentik/overlays/prod
     repoURL: https://github.com/JacekZubielik/dev-k3s-lab
-    targetRevision: "authentik"
+    targetRevision: main
   syncPolicy:
     automated:
       prune: true
