--- a/bootstrap/infra/base/apps/cert-manager-app.yaml
+++ b/bootstrap/infra/base/apps/cert-manager-app.yaml
@@ -24,7 +24,7 @@ spec:
   source:
     path: infrastructure/cert-manager/overlays/prod
     repoURL: https://github.com/JacekZubielik/dev-k3s-lab
-    targetRevision: cert-manager
+    targetRevision: main
   syncPolicy:
     automated:
       prune: true
