--- a/bootstrap/infra/base/apps/longhorn-app.yaml
+++ b/bootstrap/infra/base/apps/longhorn-app.yaml
@@ -24,7 +24,7 @@ spec:
   source:
     path: infrastructure/longhorn/overlays/prod
     repoURL: https://github.com/JacekZubielik/dev-k3s-lab
-    targetRevision: longhorn
+    targetRevision: main
   syncPolicy:
     automated:
       prune: true
