--- a/bootstrap/monitoring/base/apps/kube-prometheus-stack-app.yaml
+++ b/bootstrap/monitoring/base/apps/kube-prometheus-stack-app.yaml
@@ -24,7 +24,7 @@ spec:
   source:
     path: infrastructure/kube-prometheus-stack/overlays/prod
     repoURL: https://github.com/JacekZubielik/dev-k3s-lab
-    targetRevision: prometheus-stack
+    targetRevision: main
   syncPolicy:
     automated:
       prune: true
