--- a/apps/iot/eclipse-mosquitto/base/resources/cm.yaml
+++ b/apps/iot/eclipse-mosquitto/base/resources/cm.yaml
@@ -1,4 +1,5 @@
 # https://mosquitto.org/man/mosquitto-conf-5.html
+    # listener 1883
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -14,7 +15,6 @@ data:
     cafile /mosquitto/config/certs/ca.crt
     certfile /mosquitto/config/certs/server.crt
     keyfile /mosquitto/config/certs/server.key
-    listener 1883
     log_dest file /mosquitto/log/mosquitto.log
     log_dest stdout
     persistence true
