--- a/apps/iot/eclipse-mosquitto/base/resources/cm.yaml
+++ b/apps/iot/eclipse-mosquitto/base/resources/cm.yaml
@@ -15,6 +15,7 @@ data:
     cafile /mosquitto/config/certs/ca.crt
     certfile /mosquitto/config/certs/server.crt
     keyfile /mosquitto/config/certs/server.key
+    listener 8883
     log_dest file /mosquitto/log/mosquitto.log
     log_dest stdout
     persistence true
@@ -24,5 +25,5 @@ data:
     protocol mqtt
     require_certificate true
     socket_domain ipv4
-    use_identity_as_username false
     tls_version tlsv1.3
+    use_identity_as_username false
