--- a/apps/iot/eclipse-mosquitto/base/resources/cm.yaml
+++ b/apps/iot/eclipse-mosquitto/base/resources/cm.yaml
@@ -1,5 +1,4 @@
 # https://mosquitto.org/man/mosquitto-conf-5.html
-    # listener 1883
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -18,6 +17,7 @@ data:
     listener 8883
     log_dest file /mosquitto/log/mosquitto.log
     log_dest stdout
+    password_file /mosquitto/password_file
     persistence true
     persistence_file mosquitto.db
     persistence_location /mosquitto/data/
@@ -25,5 +25,4 @@ data:
     protocol mqtt
     require_certificate true
     socket_domain ipv4
-    tls_version tlsv1.3
-    use_identity_as_username false
+    use_identity_as_username true
