--- a/apps/iot/eclipse-mosquitto/overlays/prod/values.yaml
+++ b/apps/iot/eclipse-mosquitto/overlays/prod/values.yaml
@@ -35,11 +35,12 @@ service:
     prometheus.io/scrape: "true"
     prometheus.io/port: 9100
   labels: {}
-  type: LoadBalancer
-  externalIPs: []
+  type: ClusterIP # LoadBalancer
+  externalIPs: # []
+    - 192.168.40.189
   # - 192.168.40.110
   # - 192.168.40.111
-  loadBalancerIP: "192.168.40.189"
+  loadBalancerIP: [] # "192.168.40.189"
   externalTrafficPolicy: {}
   loadBalancerSourceRanges: []
   publishNotReadyAddresses: false
