--- a/apps/iot/eclipse-mosquitto/base/resources/cm.yaml
+++ b/apps/iot/eclipse-mosquitto/base/resources/cm.yaml
@@ -1,4 +1,6 @@
 # https://mosquitto.org/man/mosquitto-conf-5.html
+    # password_file /mosquitto/password_file
+
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -17,7 +19,6 @@ data:
     listener 8883
     log_dest file /mosquitto/log/mosquitto.log
     log_dest stdout
-    password_file /mosquitto/password_file
     persistence true
     persistence_file mosquitto.db
     persistence_location /mosquitto/data/
@@ -25,4 +26,4 @@ data:
     protocol mqtt
     require_certificate true
     socket_domain ipv4
-    use_identity_as_username true
+    use_identity_as_username false
