chore(bump): to 0.0.9

--- a/apps/iot/eclipse-mosquitto/base/resources/cm.yaml
+++ b/apps/iot/eclipse-mosquitto/base/resources/cm.yaml
@@ -27,3 +27,4 @@ data:
     require_certificate true
     socket_domain ipv4
     use_identity_as_username false
+    password_file /mosquitto/password_file
