chore(pass): update

--- a/apps/iot/eclipse-mosquitto/overlays/prod/values.yaml
+++ b/apps/iot/eclipse-mosquitto/overlays/prod/values.yaml
@@ -26,9 +26,9 @@ podSecurityContext:
     - ALL
 
 securityContext:
-  runAsUser: 999
-  runAsGroup: 999
-  fsGroup: 999
+  runAsUser: 1883 # 999
+  runAsGroup: 1883 # 999
+  fsGroup: 1883 # 999
 
 service:
   annotations:
