--- a/apps/iot/eclipse-mosquitto/base/resources/cm.yaml
+++ b/apps/iot/eclipse-mosquitto/base/resources/cm.yaml
@@ -16,9 +16,10 @@ data:
     cafile /mosquitto/config/certs/ca.crt
     certfile /mosquitto/config/certs/server.crt
     keyfile /mosquitto/config/certs/server.key
-    listener 8883
+    listener 8883 0.0.0.0
     log_dest file /mosquitto/log/mosquitto.log
     log_dest stdout
+    log_timestamp true
     persistence true
     persistence_file mosquitto.db
     persistence_location /mosquitto/data/
@@ -26,5 +27,7 @@ data:
     protocol mqtt
     require_certificate true
     socket_domain ipv4
-    use_identity_as_username false
-    password_file /mosquitto/config/password_file
+    use_identity_as_username true
+    use_identity_as_username true
+    password_file /mosquitto/password_file
+    connection_messages true
