--- a/apps/iot/eclipse-mosquitto/base/resources/cm.yaml
+++ b/apps/iot/eclipse-mosquitto/base/resources/cm.yaml
@@ -1,6 +1,6 @@
 # https://mosquitto.org/man/mosquitto-conf-5.html
     # password_file /mosquitto/password_file
-
+# listener 8883 0.0.0.0
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -17,7 +17,7 @@ data:
     certfile /mosquitto/config/certs/server.crt
     connection_messages true
     keyfile /mosquitto/config/certs/server.key
-    listener 8883 0.0.0.0
+    listener 8883
     log_dest file /mosquitto/log/mosquitto.log
     log_dest stdout
     log_timestamp true
@@ -29,3 +29,4 @@ data:
     require_certificate false
     socket_domain ipv4
     use_identity_as_username true
+    password_file /mosquitto/password_file
