--- a/apps/iot/eclipse-mosquitto/overlays/prod/values.yaml
+++ b/apps/iot/eclipse-mosquitto/overlays/prod/values.yaml
@@ -37,10 +37,9 @@ service:
   labels: {}
   type: LoadBalancer
   externalIPs: # []
-    - 192.168.40.189
   # - 192.168.40.110
   # - 192.168.40.111
-  loadBalancerIP: [] # "192.168.40.189"
+  loadBalancerIP: "192.168.40.189"
   externalTrafficPolicy: {}
   loadBalancerSourceRanges: []
   publishNotReadyAddresses: false
