--- a/apps/iot/eclipse-mosquitto/overlays/prod/values.yaml
+++ b/apps/iot/eclipse-mosquitto/overlays/prod/values.yaml
@@ -36,7 +36,7 @@ service:
     prometheus.io/port: 9100
   labels: {}
   type: LoadBalancer
-  externalIPs: # []
+  externalIPs: []
   # - 192.168.40.110
   # - 192.168.40.111
   loadBalancerIP: "192.168.40.189"
