chore(require_certificate): true

--- a/apps/iot/eclipse-mosquitto/base/resources/cm.yaml
+++ b/apps/iot/eclipse-mosquitto/base/resources/cm.yaml
@@ -26,6 +26,6 @@ data:
     persistence_location /mosquitto/data/
     pid_file /mosquitto/mosquitto.pid
     protocol mqtt
-    require_certificate false
+    require_certificate true
     socket_domain ipv4
     use_identity_as_username true
