--- a/bootstrap/iot/base/apps/eclipse-mosquitto-app.yaml
+++ b/bootstrap/iot/base/apps/eclipse-mosquitto-app.yaml
@@ -24,7 +24,7 @@ spec:
   source:
     path: apps/iot/eclipse-mosquitto/overlays/prod
     repoURL: https://github.com/JacekZubielik/dev-k3s-lab
-    targetRevision: mosquitto
+    targetRevision: main
   syncPolicy:
     automated:
       prune: true
