--- a/bootstrap/monitoring/base/kustomization.yaml
+++ b/bootstrap/monitoring/base/kustomization.yaml
@@ -3,6 +3,6 @@ kind: Kustomization
 
 resources:
 - apps/kube-prometheus-stack-app.yaml
-# - apps/loki-app.yaml
 - apps/mktxp-app.yaml
-# - apps/uptime-kuma-app.yaml
+- apps/uptime-kuma-app.yaml
+# - apps/loki-app.yaml
