--- a/infrastructure/crds-csi-external-snapshotter/base/kustomization.yaml
+++ b/infrastructure/crds-csi-external-snapshotter/base/kustomization.yaml
@@ -1,9 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-# metadata:
-#   annotations:
-#     argocd.argoproj.io/compare-options: IgnoreExtraneous
+metadata:
+  annotations:
+    argocd.argoproj.io/compare-options: IgnoreExtraneous
 
 resources:
 - resources/snapshot.storage.k8s.io_volumesnapshotclasses.yaml
