--- a/infrastructure/crds-prometheus-stack/base/kustomization.yaml
+++ b/infrastructure/crds-prometheus-stack/base/kustomization.yaml
@@ -2,9 +2,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-# metadata:
-#   annotations:
-#     argocd.argoproj.io/compare-options: IgnoreExtraneous
+metadata:
+  annotations:
+    argocd.argoproj.io/compare-options: IgnoreExtraneous
 
 resources:
 - resources/crd-alertmanagerconfigs.yaml
