--- a/bootstrap/root-app/overlays/prod/kustomization.yaml
+++ b/bootstrap/root-app/overlays/prod/kustomization.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
@@ -7,7 +8,7 @@ resources:
 patches:
 - path: crds-branch.yaml
 - path: infra-branch.yaml
-# - path: iot-branch.yaml
-# - path: media-branch.yaml
+- path: iot-branch.yaml
+- path: media-branch.yaml
 - path: monitoring-branch.yaml
-# - path: trade-branch.yaml
+- path: trade-branch.yaml
