--- a/bootstrap/crds/base/apps/crds-csi-external-snapshotter-app.yaml
+++ b/bootstrap/crds/base/apps/crds-csi-external-snapshotter-app.yaml
@@ -4,11 +4,11 @@ kind: Application
 metadata:
   annotations:
     argocd.argoproj.io/sync-wave: '10'
-  finalizers:
-  - resources-finalizer.argocd.argoproj.io
-  labels:
-    app.kubernetes.io/managed-by: argocd-autopilot
-    app.kubernetes.io/name: crds-csi-external-snapshotter
+  # finalizers:
+  # - resources-finalizer.argocd.argoproj.io
+  # labels:
+  #   app.kubernetes.io/managed-by: argocd-autopilot
+  #   app.kubernetes.io/name: crds-csi-external-snapshotter
   name: crds-csi-external-snapshotter
   namespace: argocd
 spec:
