--- a/bootstrap/crds/base/apps/crds-prometheus-stack-app.yaml
+++ b/bootstrap/crds/base/apps/crds-prometheus-stack-app.yaml
@@ -4,11 +4,11 @@ kind: Application
 metadata:
   annotations:
     argocd.argoproj.io/sync-wave: '10'
-  finalizers:
-  - resources-finalizer.argocd.argoproj.io
-  labels:
-    app.kubernetes.io/managed-by: argocd-autopilot
-    app.kubernetes.io/name: crds-prometheus-stack
+  # finalizers:
+  # - resources-finalizer.argocd.argoproj.io
+  # labels:
+  #   app.kubernetes.io/managed-by: argocd-autopilot
+  #   app.kubernetes.io/name: crds-prometheus-stack
   name: crds-prometheus-stack
   namespace: argocd
 spec:
