--- a/bootstrap/infra/base/apps/longhorn-app.yaml
+++ b/bootstrap/infra/base/apps/longhorn-app.yaml
@@ -4,11 +4,11 @@ kind: Application
 metadata:
   annotations:
     argocd.argoproj.io/sync-wave: '17'
-  finalizers:
-  - resources-finalizer.argocd.argoproj.io
-  labels:
-    app.kubernetes.io/managed-by: argocd-autopilot
-    app.kubernetes.io/name: longhorn
+  # finalizers:
+  # - resources-finalizer.argocd.argoproj.io
+  # labels:
+  #   app.kubernetes.io/managed-by: argocd-autopilot
+  #   app.kubernetes.io/name: longhorn
   name: longhorn
   namespace: argocd
 spec:
@@ -39,12 +39,12 @@ spec:
     - CreateNamespace=true
     - ServerSideApply=true
     - ApplyOutOfSyncOnly=true
-status:
-  health: {}
-  summary: {}
-  sync:
-    comparedTo:
-      destination: {}
-      source:
-        repoURL: ""
-    status: ""
+# status:
+#   health: {}
+#   summary: {}
+#   sync:
+#     comparedTo:
+#       destination: {}
+#       source:
+#         repoURL: ""
+#     status: ""
