chore(cleanup): code

--- a/bootstrap/root-app/overlays/prod/kustomization.yaml
+++ b/bootstrap/root-app/overlays/prod/kustomization.yaml
@@ -8,7 +8,7 @@ resources:
 patches:
 - path: crds-branch.yaml
 - path: infra-branch.yaml
-- path: iot-branch.yaml
-- path: media-branch.yaml
+# - path: iot-branch.yaml
+# - path: media-branch.yaml
 - path: monitoring-branch.yaml
-- path: trade-branch.yaml
+# - path: trade-branch.yaml
