--- a/apps/media/lms/base/resources/volume.yaml
+++ b/apps/media/lms/base/resources/volume.yaml
@@ -18,11 +18,10 @@ metadata:
   namespace: longhorn-system
 spec:
   backingImage: "pvc-lms-config"
-  dataLocality: "best-effort" #  "strict-local"
+  dataLocality: "best-effort"
   diskSelector:
   - data
   # - fast
-  engineImage: longhornio/longhorn-engine:v1.6.2
   # fromBackup: "s3://k3s-longhorn-backup@us-east-1/?backup=backup-3106146ce7b54b7e&volume=pvc-lms-config"
   frontend: blockdev
   # migratable: false
@@ -33,4 +32,4 @@ spec:
   restoreVolumeRecurringJob: enabled
   # revisionCounterDisabled: false
   size: '10737418240'
-  snapshotMaxCount: 10
+  snapshotMaxCount: 20
