--- a/bootstrap/root-app/base/kustomization.yaml
+++ b/bootstrap/root-app/base/kustomization.yaml
@@ -5,7 +5,7 @@ kind: Kustomization
 resources:
 - crds.yaml
 - infra.yaml
-- iot.yaml
-- media.yaml
+# - iot.yaml
+# - media.yaml
 - monitoring.yaml
-- trade.yaml
+# - trade.yaml
