--- a/infrastructure/kube-prometheus-stack/base/resources/volume.yaml
+++ b/infrastructure/kube-prometheus-stack/base/resources/volume.yaml
@@ -5,7 +5,8 @@ metadata:
   finalizers:
   - longhorn.io
   annotations:
-    argocd.argoproj.io/sync-wave: "-1"
+    argocd.argoproj.io/hook: PreSync
+    # argocd.argoproj.io/sync-wave: "-1"
   labels:
     longhornvolume: pvc-kube-alertmanager
     # recurring-job-group.longhorn.io/default: enabled
@@ -38,7 +39,8 @@ metadata:
   finalizers:
   - longhorn.io
   annotations:
-    argocd.argoproj.io/sync-wave: "-1"
+    argocd.argoproj.io/hook: PreSync
+    # argocd.argoproj.io/sync-wave: "-1"
   labels:
     longhornvolume: pvc-kube-grafana
     # recurring-job-group.longhorn.io/default: enabled
@@ -48,12 +50,12 @@ metadata:
   name: pvc-kube-grafana
   namespace: longhorn-system
 spec:
-  backingImage: "pvc-kube-grafana"
-  dataLocality: "best-effort"
+  backingImage: 'pvc-kube-grafana'
+  dataLocality: 'best-effort'
   diskSelector:
   - data
   # - fast
-  # fromBackup: "s3://k3s-longhorn-backup@us-east-1/?backup=system-backup-2f1b76dc41724960&volume=pvc-kube-grafana"
+  fromBackup: 's3://k3s-longhorn-backup@us-east-1/?backup=backup-5b9118d3e59d4768&volume=pvc-kube-grafana'
   frontend: blockdev
   # migratable: false
   nodeSelector:
@@ -72,22 +74,23 @@ metadata:
   finalizers:
   - longhorn.io
   annotations:
-    argocd.argoproj.io/sync-wave: "-1"
+    argocd.argoproj.io/hook: PreSync
+    # argocd.argoproj.io/sync-wave: "-1"
   labels:
     longhornvolume: pvc-kube-prometheus
-    recurring-job-group.longhorn.io/default: enabled
+    # recurring-job-group.longhorn.io/default: enabled
     recurring-job-group.longhorn.io/group1: enabled
     recurring-job.longhorn.io/24-hour-snapshots: enabled
     recurring-job.longhorn.io/48-hour-backups: enabled
   name: pvc-kube-prometheus
   namespace: longhorn-system
 spec:
-  backingImage: "pvc-kube-prometheus"
+  backingImage: pvc-kube-prometheus
   dataLocality: "best-effort"
   diskSelector:
   - data
   # - fast
-  # fromBackup: "s3://k3s-longhorn-backup@us-east-1/?backup=system-backup-4cb2f5df916e4565&volume=pvc-kube-prometheus"
+  fromBackup: s3://k3s-longhorn-backup@us-east-1/?backup=backup-c43034e9781042d0&volume=pvc-kube-prometheus
   frontend: blockdev
   # migratable: false
   nodeSelector:
