chore(selfheal): false

--- a/bootstrap/monitoring/base/apps/kube-prometheus-stack-app.yaml
+++ b/bootstrap/monitoring/base/apps/kube-prometheus-stack-app.yaml
@@ -28,7 +28,7 @@ spec:
   syncPolicy:
     automated:
       prune: true
-      selfHeal: true
+      selfHeal: false
     retry:
       limit: 4
       backoff:
