--- a/infrastructure/uptime-kuma/base/resources/volume.yaml
+++ b/infrastructure/uptime-kuma/base/resources/volume.yaml
@@ -15,8 +15,8 @@ metadata:
   name: pvc-kuma
   namespace: longhorn-system
 spec:
-  backingImage: "pvc-kuma"
-  dataLocality: "best-effort"
+  backingImage: pvc-kuma
+  dataLocality: best-effort
   diskSelector:
   - data
   # - fast
