--- a/bootstrap/monitoring/base/apps/kube-prometheus-stack-app.yaml
+++ b/bootstrap/monitoring/base/apps/kube-prometheus-stack-app.yaml
@@ -28,7 +28,7 @@ spec:
   syncPolicy:
     automated:
       prune: true
-      selfHeal: false
+      selfHeal: true
     retry:
       limit: 4
       backoff:
