--- a/apps/iot/eclipse-mosquitto/base/resources/volume.yaml
+++ b/apps/iot/eclipse-mosquitto/base/resources/volume.yaml
@@ -8,26 +8,22 @@ metadata:
     argocd.argoproj.io/sync-wave: "-1"
   labels:
     longhornvolume: pvc-mosquitto
-    # recurring-job-group.longhorn.io/default: enabled
     recurring-job-group.longhorn.io/group1: enabled
     recurring-job.longhorn.io/24-hour-snapshots: enabled
-    # recurring-job.longhorn.io/48-hour-backups: enabled
   name: pvc-mosquitto
   namespace: longhorn-system
 spec:
-  backingImage: "pvc-mosquitto"
-  dataLocality: "best-effort"
+  backingImage: pvc-mosquitto
+  dataLocality: best-effort
   diskSelector:
   - data
   # - fast
-  # fromBackup: "s3://k3s-longhorn-backup@us-east-1/?backup=system-backup-6e0044ee5d464ba9&volume=pvc-mosquitto"
+  # fromBackup: s3://k3s-longhorn-backup@us-east-1/?backup=system-backup-6e0044ee5d464ba9&volume=pvc-mosquitto
   frontend: blockdev
   # migratable: true
   nodeSelector:
   - fast
   # - storage
   numberOfReplicas: 1
-  restoreVolumeRecurringJob: enabled
-  # revisionCounterDisabled: false
   size: '1073741824'
   snapshotMaxCount: 20
