--- a/apps/iot/home-assistant/base/kustomization.yaml
+++ b/apps/iot/home-assistant/base/kustomization.yaml
@@ -7,6 +7,7 @@ kind: Kustomization
 #     argocd.argoproj.io/compare-options: IgnoreExtraneous
 
 resources:
+- resources/backing-image.yaml
 - resources/pv.yaml
 - resources/pvc.yaml
 - resources/service.yaml
