--- a/apps/iot/home-assistant/base/resources/volume.yaml
+++ b/apps/iot/home-assistant/base/resources/volume.yaml
@@ -8,26 +8,23 @@ metadata:
     argocd.argoproj.io/sync-wave: "-1"
   labels:
     longhornvolume: pvc-ha-data
-    # recurring-job-group.longhorn.io/default: enabled
     recurring-job-group.longhorn.io/group1: enabled
     recurring-job.longhorn.io/24-hour-snapshots: enabled
     recurring-job.longhorn.io/48-hour-backups: enabled
   name: pvc-ha-data
   namespace: longhorn-system
 spec:
-  backingImage: "pvc-ha-data"
-  dataLocality: "best-effort"
+  backingImage: pvc-ha-data
+  dataLocality: best-effort
   diskSelector:
   - data
   # - fast
-  # fromBackup: "s3://k3s-longhorn-backup@us-east-1/?backup=backup-3f53ceaede164801&volume=pvc-ha-data"
+  # fromBackup: s3://k3s-longhorn-backup@us-east-1/?backup=backup-3f53ceaede164801&volume=pvc-ha-data
   frontend: blockdev
   # migratable: false
   nodeSelector:
   - fast
   # - storage
   # numberOfReplicas: 1
-  # restoreVolumeRecurringJob: enabled
-  # revisionCounterDisabled: false
   size: '10737418240'
   snapshotMaxCount: 20
