--- a/apps/iot/zigbee2mqtt/base/resources/volume.yaml
+++ b/apps/iot/zigbee2mqtt/base/resources/volume.yaml
@@ -8,26 +8,23 @@ metadata:
     argocd.argoproj.io/sync-wave: "-1"
   labels:
     longhornvolume: pvc-zigbee2mqtt-data
-    # recurring-job-group.longhorn.io/default: enabled
     recurring-job-group.longhorn.io/group1: enabled
     recurring-job.longhorn.io/24-hour-snapshots: enabled
     recurring-job.longhorn.io/48-hour-backups: enabled
   name: pvc-zigbee2mqtt-data
   namespace: longhorn-system
 spec:
-  backingImage: "pvc-zigbee2mqtt-data"
-  dataLocality: "best-effort"
+  backingImage: pvc-zigbee2mqtt-data
+  dataLocality: best-effort
   diskSelector:
   - data
   # - fast
-  # fromBackup: "s3://k3s-longhorn-backup@us-east-1/?backup=backup-5c654121cc924d80&volume=pvc-zigbee2mqtt-data"
+  # fromBackup: s3://k3s-longhorn-backup@us-east-1/?backup=backup-5c654121cc924d80&volume=pvc-zigbee2mqtt-data
   frontend: blockdev
   # migratable: true
   nodeSelector:
   - fast
   # - storage
   # numberOfReplicas: 1
-  restoreVolumeRecurringJob: enabled
-  # revisionCounterDisabled: false
   size: '4294967296'
   snapshotMaxCount: 20
