--- a/apps/media/lms/base/kustomization.yaml
+++ b/apps/media/lms/base/kustomization.yaml
@@ -7,10 +7,10 @@ kind: Kustomization
 #     argocd.argoproj.io/compare-options: IgnoreExtraneous
 
 resources:
+- resources/backing-image.yaml
 - resources/pv.yaml
 - resources/pvc.yaml
 - resources/volume.yaml
-# - resources/backingimage.yaml
 # - resources/volume.snapshot.yaml
 
 # generators:
