--- a/apps/media/lms/base/resources/pvc.yaml
+++ b/apps/media/lms/base/resources/pvc.yaml
@@ -2,11 +2,11 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  annotations:
-    # argocd.argoproj.io/hook: PreSync
-    argocd.argoproj.io/sync-wave: "-1"
+  # annotations:
+  #   argocd.argoproj.io/hook: PreSync
+  #   argocd.argoproj.io/sync-wave: "-1"
   name: pvc-lms-config
-  namespace: media
+  # namespace: media
 spec:
   # dataSource:
   #   name: pvc-lms-config
@@ -28,7 +28,6 @@ spec:
 #     # argocd.argoproj.io/hook: Sync
 #     argocd.argoproj.io/sync-wave: "0"
 #   name: pvc-musicstorage
-#   namespace: media
 # spec:
 #   accessModes:
 #   - ReadWriteMany
