--- a/apps/media/lms/base/resources/volume.yaml
+++ b/apps/media/lms/base/resources/volume.yaml
@@ -5,31 +5,26 @@ metadata:
   finalizers:
   - longhorn.io
   annotations:
-    # argocd.argoproj.io/hook: PreSync
-    argocd.argoproj.io/sync-options: Delete=false
     argocd.argoproj.io/sync-wave: "-2"
   labels:
     longhornvolume: pvc-lms-config
-    # recurring-job-group.longhorn.io/default: enabled
     recurring-job-group.longhorn.io/group1: enabled
     recurring-job.longhorn.io/24-hour-snapshots: enabled
     recurring-job.longhorn.io/48-hour-backups: enabled
   name: pvc-lms-config
   namespace: longhorn-system
 spec:
-  backingImage: "pvc-lms-config"
-  dataLocality: "best-effort"
+  backingImage: pvc-lms-config
+  dataLocality: best-effort
   diskSelector:
   - data
   # - fast
-  # fromBackup: "s3://k3s-longhorn-backup@us-east-1/?backup=backup-3106146ce7b54b7e&volume=pvc-lms-config"
+  # fromBackup: s3://k3s-longhorn-backup@us-east-1/?backup=backup-3106146ce7b54b7e&volume=pvc-lms-config
   frontend: blockdev
   # migratable: false
   nodeSelector:
   - fast
   # - storage
   numberOfReplicas: 1
-  restoreVolumeRecurringJob: enabled
-  # revisionCounterDisabled: false
   size: '10737418240'
   snapshotMaxCount: 20
