--- a/apps/media/syncthing/base/resources/pvc.yaml
+++ b/apps/media/syncthing/base/resources/pvc.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: pvc-syncthing
-  namespace: syncthing
+  # namespace: syncthing
 spec:
   accessModes:
   - ReadWriteOnce
