--- a/bootstrap/iot/base/kustomization.yaml
+++ b/bootstrap/iot/base/kustomization.yaml
@@ -4,6 +4,6 @@ kind: Kustomization
 
 resources:
 - apps/eclipse-mosquitto-app.yaml
-- apps/esphome-app.yaml
+# - apps/esphome-app.yaml
 - apps/home-assistant-app.yaml
 - apps/zigbee2mqtt-app.yaml
