--- a/infrastructure/authentik/base/resources/pvc.yaml
+++ b/infrastructure/authentik/base/resources/pvc.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: pvc-authentik-psql
-  namespace: authentik
+  # namespace: authentik
 spec:
   # dataSource:
   #   name: pvc-lms-config-backup
@@ -22,7 +22,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: pvc-authentik-redis
-  namespace: authentik
+  # namespace: authentik
 spec:
 #   dataSource:
 #     name: pvc-lms-config-backup
