--- a/bootstrap/root-app/overlays/prod/kustomization.yaml
+++ b/bootstrap/root-app/overlays/prod/kustomization.yaml
@@ -9,6 +9,6 @@ patches:
 - path: crds-branch.yaml
 - path: infra-branch.yaml
 - path: monitoring-branch.yaml
-# - path: iot-branch.yaml
-# - path: media-branch.yaml
-# - path: trade-branch.yaml
+- path: iot-branch.yaml
+- path: media-branch.yaml
+- path: trade-branch.yaml
