chore(targetrevision): main

--- a/bootstrap/media/base/apps/lms-app.yaml
+++ b/bootstrap/media/base/apps/lms-app.yaml
@@ -24,7 +24,7 @@ spec:
   source:
     path: apps/media/lms/overlays/prod
     repoURL: https://github.com/JacekZubielik/dev-k3s-lab
-    targetRevision: lms
+    targetRevision: main
   syncPolicy:
     automated:
       prune: true
