revert(boot): minimum

--- a/bootstrap/root-app/base/iot.yaml
+++ b/bootstrap/root-app/base/iot.yaml
@@ -27,8 +27,8 @@ spec:
   syncPolicy:
     automated:
       allowEmpty: true
-      # prune: true
-      # selfHeal: true
+      prune: true
+      selfHeal: true
     syncOptions:
     - allowEmpty=true
 # status:
