--- a/apps/iot/zigbee2mqtt/base/resources/backing-image.yaml
+++ b/apps/iot/zigbee2mqtt/base/resources/backing-image.yaml
@@ -3,7 +3,8 @@ apiVersion: longhorn.io/v1beta2
 kind: BackingImage
 metadata:
   annotations:
-    argocd.argoproj.io/sync-wave: "-2"
+    argocd.argoproj.io/hook: PreSync
+    # argocd.argoproj.io/sync-wave: "-2"
   name: pvc-zigbee2mqtt-data
   namespace: longhorn-system
 spec:
