--- a/bootstrap/infra/base/kustomization.yaml
+++ b/bootstrap/infra/base/kustomization.yaml
@@ -3,9 +3,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- apps/cert-manager-app.yaml
+# - apps/cert-manager-app.yaml
 - apps/csi-external-snapshotter-app.yaml
 - apps/longhorn-app.yaml
 - apps/minio-app.yaml
-- apps/authentik-app.yaml
-- apps/traefik-app.yaml
+# - apps/authentik-app.yaml
+# - apps/traefik-app.yaml
