--- a/bootstrap/iot/base/kustomization.yaml
+++ b/bootstrap/iot/base/kustomization.yaml
@@ -3,7 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- apps/eclipse-mosquitto-app.yaml
+# - apps/eclipse-mosquitto-app.yaml
 # - apps/esphome-app.yaml
-- apps/home-assistant-app.yaml
+# - apps/home-assistant-app.yaml
 - apps/zigbee2mqtt-app.yaml
